--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Python-specific
+__pycache__/
+*.pyc
+*.pyo
+.env
+
+# Virtual environment
+venv/
+env/
+*.egg-info/
+.DS_Store
+
 # dependencies
 /node_modules
 /.pnp
